@@ -2,7 +2,7 @@ Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
 Version: 1.4.1
-Date: 2018-03-08
+Date: 2018-03-14
 Depends:
     R (>= 2.10)
 Author: Brett McClintock, Theo Michelot
@@ -36,7 +36,9 @@ Imports:
     qdapRegex,
     geosphere,
     LaplacesDemon,
-    prodlim
+    prodlim,
+    dplyr,
+    magrittr
 LinkingTo: Rcpp, RcppArmadillo
 Suggests:
     testthat,
