@@ -12,6 +12,9 @@ S3method(plot,momentuHMMData)
 S3method(print,miHMM)
 S3method(print,miSum)
 S3method(print,momentuHMM)
+S3method(timeInStates,HMMfits)
+S3method(timeInStates,miHMM)
+S3method(timeInStates,momentuHMM)
 export(AICweights)
 export(CIbeta)
 export(CIreal)
@@ -34,6 +37,7 @@ export(pseudoRes)
 export(simData)
 export(simObsData)
 export(stateProbs)
+export(timeInStates)
 export(viterbi)
 importFrom(Brobdingnag,as.brob)
 importFrom(Brobdingnag,sum)
@@ -60,6 +64,9 @@ importFrom(crawl,crwPredictPlot)
 importFrom(crawl,crwSimulator)
 importFrom(doParallel,registerDoParallel)
 importFrom(doParallel,stopImplicitCluster)
+importFrom(dplyr,funs)
+importFrom(dplyr,group_by_at)
+importFrom(dplyr,summarise_at)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(geosphere,bearing)
@@ -95,6 +102,7 @@ importFrom(graphics,segments)
 importFrom(graphics,title)
 importFrom(gstat,gstat)
 importFrom(gstat,vgm)
+importFrom(magrittr,"%>%")
 importFrom(mitools,MIcombine)
 importFrom(moveHMM,fitHMM)
 importFrom(moveHMM,simData)
